owner details overlap fix, off duty location padding fix, weekly badge fix, off duty icon fix, disabled ta-card cursor fix

--- a/src/app/core/components/driver/driver-details/driver-details-item/driver-details-item.component.scss
+++ b/src/app/core/components/driver/driver-details/driver-details-item/driver-details-item.component.scss
@@ -24,7 +24,7 @@
 .purchase-template {
     display: grid;
     grid-template-columns: repeat(2, 193px);
-    grid-template-rows: repeat(1, 36px);
+    grid-template-rows: repeat(1, auto);
     grid-column-gap: 22px;
     padding: 0px 10px 2px 10px;
     margin-top: -7px;
@@ -32,6 +32,7 @@
         .purchase-icon-copy {
             display: flex;
             align-items: flex-start;
+            padding-right: 18px;
             cursor: pointer;
             .hidden-svg-eye {
                 margin-left: 5px;
@@ -60,6 +61,7 @@
                 }
             }
             &:hover {
+                padding-right: 0px;
                 .card-icon {
                     display: block;
                 }
