--- a/src/app/core/components/shared/ta-custom-card/ta-custom-card.component.scss
+++ b/src/app/core/components/shared/ta-custom-card/ta-custom-card.component.scss
@@ -251,7 +251,13 @@
                         background: rgb(145, 145, 145, 0.2);
                     }
                 }
+            
+                &.disabledWeeklyStatus{
+                    margin-right: 30px;
+                }
+            
             }
+            
 
             // EDIT & DELETE ACTIONS
             .edit-delete-actions {
@@ -408,6 +414,8 @@
             .ta-counter-number {
                 color: #b7b7b7 !important;
             }
+
+            cursor: auto;
         }
 
         &.cursor {
